# LitExtract

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: extraction_schema.json
configs/classification/: augmentation.yaml  resnet50.yaml
configs/dag/: confidence_config.yaml  dag_constraints.yaml  validation_rules.yaml
configs/kg/: kg_schema.json
configs/llm/: context_ablation.yaml  inference_config.yaml  qlora_config.yaml  training_args.yaml
configs/yolo/: dataset.yaml  hyperparams.yaml  inference.yaml
data/: README.md
data/extracted_json/: nickel_semantic_data.json  ti_semantic_data.json
data/kg_outputs/: edges.csv  kg.graphml  nodes.csv  ti_mmkg_data.json
data/metadata/: corpus_statistics.csv  llm_training_dois.csv  ni_dag_dois.csv  paper_dois.csv  paper_dois.json  paper_metadata.csv  ti_mmkg_dois.csv
docs/: annotation_protocol.md  architecture.md  data_availability.md  reproducibility.md  usage.md
examples/: README.md
examples/demo_pipeline/: run_demo.py
models/: checkpoints.md  hf_links.md  model_selection.md
prompts/: deepseek_preannotation_prompt.txt  extraction_prompt_v1.txt  extraction_prompt_v2.txt  nickel_case_prompt.txt
scripts/: __init__.py  build_nickel_demo.py  build_ti_case_study.py  export_standardized_data.py  reproduce_tables.py  run_pipeline.py
supplementary/: README.md
tests/: __init__.py  conftest.py  test_caption_matching.py  test_cooccurrence_miner.py  test_dag_causal.py  test_kg_builder.py  test_modules_import.py  test_normalization.py
(+76 files in other folders)
